--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -56,50 +56,56 @@
 		th:object="${evenement}" method="post" id="evenementForm">
 		<input type="hidden" th:field="*{id}" />
 		<div th:replace="includeForm :: dateField"></div>
-		<div class="mb-3">
-			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label> <select
+		<div class="form-floating mb-3">
+			<select
 				class="form-control" th:field="*{type}">
 				<option
 					th:each="typeEvenement : ${T(ooioo.ruches.evenement.TypeEvenement).values()}"
 					th:value="${typeEvenement}" th:text="#{${typeEvenement}}"></option>
 			</select>
+			<label class="form-label" for="typeEvenement" th:text="#{typeEvenement}"></label>
 		</div>
-		<div class="mb-3 ruches">
-			<label class="form-label" for="ruche" th:text="#{ruche}"></label> <select
+		<div class="form-floating mb-3 ruches">
+			<select
 				class="form-control" th:field="*{ruche}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="rucheopt : ${ruches}" th:value="${rucheopt.id}"
 					th:text="${rucheopt.nom}"></option>
 			</select>
+			<label class="form-label" for="ruche" th:text="#{ruche}"></label>
 		</div>
-		<div class="mb-3 ruches">
-			<label class="form-label" for="essaim" th:text="#{essaim}"></label> <select
+		<div class="form-floating mb-3 ruches">
+			<select
 				class="form-control" th:field="*{essaim}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="essaimopt : ${essaims}" th:value="${essaimopt.id}"
 					th:text="${essaimopt.nom}"></option>
 			</select>
+			<label class="form-label" for="essaim" th:text="#{essaim}"></label>
 		</div>
-		<div class="mb-3 ruches">
-			<label class="form-label" class="form-label" for="rucher" th:text="#{rucher}"></label> <select
+		<div class="form-floating mb-3 ruches">
+			<select
 				class="form-control" th:field="*{rucher}">
 				<option th:text="#{aucun}" value=""></option>
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
 					th:text="${rucheropt.nom}"></option>
 			</select>
+			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
-		<div class="mb-3 ruches">
-			<label for="hausse" th:text="#{hausse}"></label> <select
+		<div class="form-floating mb-3 ruches">
+			<select
 				class="form-control" th:field="*{hausse}">
 				<option th:text="#{aucune}" value=""></option>
 				<option th:each="hausseopt : ${hausses}" th:value="${hausseopt.id}"
 					th:text="${hausseopt.nom}"></option>
 			</select>
+			<label for="hausse" th:text="#{hausse}"></label>
 		</div>
-		<div class="mb-3">
-			<label class="form-label" for="valeur" th:text="#{valeur}"></label> <input
+		<div class="form-floating mb-3">
+			<input placeholder=""
 				class="form-control" type="number" step="0.001"
 				th:field="*{valeur}" th:errorclass="fieldError" maxlength="64" />
+			<label class="form-label" for="valeur" th:text="#{valeur}"></label>
 		</div>
 		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
