--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -23,13 +23,14 @@
 				name="finTraitement" /> <label class="form-check-label"
 				for="finTraitement" th:text="#{finTraitement}"></label>
 		</div>
-		<div th:fragment="poidskg" class="mb-3">
-			<label class="form-label" th:text="#{poidskg}" for="valeur"></label> <input
+		<div th:fragment="poidskg" class="form-floating mb-3">
+			<input placeholder=""
 				class="form-control" type="number" step="0.001" id="valeur"
 				name="valeur" />
+			<label class="form-label" th:text="#{poidskg}" for="valeur"></label>
 		</div>
 		<div th:fragment="nomField" class="form-floating mb-3">
-			<input placeholder="xx"
+			<input placeholder=""
 				class="form-control" type="text" th:field="*{nom}"
 				maxlength="92" th:errorclass="fieldError" />
 			<label class="form-label" for="nom" th:text="#{nom}"></label> 
@@ -42,16 +43,18 @@
 			<input class="form-check-input" type="checkbox" th:field="*{actif}" />
 			<label class="form-check-label" for="actif" th:text="#{actif}"></label>
 		</div>
-		<div th:fragment="date" class="mb-3">
-			<label class="form-label" for="date" th:text="#{date}"></label> <input
+		<div th:fragment="date" class="form-floating mb-3">
+			<input placeholder=""
 				class="form-control datepicker" type="text" id="date"
 				name="date"
 				th:value="${#temporals.format(date, 'yyyy/MM/dd HH:mm')}" />
+			<label class="form-label" for="date" th:text="#{date}"></label> 
 		</div>
-		<div th:fragment="dateField" class="mb-3">
-			<label class="form-label" for="date" th:text="#{date}"></label> <input
+		<div th:fragment="dateField" class="form-floating mb-3">
+			<input placeholder=""
 				class="form-control datepicker" type="text"
 				th:field="*{date}" th:errorclass="fieldError" />
+			<label class="form-label" for="date" th:text="#{date}"></label>
 		</div>
 		<div th:fragment="dateAcquisitionField" class="form-floating mb-3">
 			<input placeholder="2021-03-26"
@@ -65,10 +68,10 @@
 				th:errorclass="fieldError" maxlength="255"></textarea>
 			<label class="form-label" th:text="#{commentaire}" for="commentaire"></label>
 		</div>
-		<div th:fragment="commentaire" class="mb-3">
-			<label class="form-label" for="commentaire" th:text="#{commentaire}"></label>
+		<div th:fragment="commentaire" class="form-floating mb-3">
 			<textarea class="form-control" id="commentaire" name="commentaire"
-				cols="35"></textarea>
+				cols="35" placeholder=""></textarea>
+			<label class="form-label" for="commentaire" th:text="#{commentaire}"></label>
 		</div>
 		<div th:fragment="latitudeField" class="form-floating mb-3">
 			<input class="form-control" placeholder="43,490837"
