--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,28 +27,21 @@
 	<div th:if="${param.logout}" th:text="#{deconnecte}"></div>
 	<br />
 	<form th:action="@{/login}" method="post">
-		<div class="mb-3">
-			<label class="form-label" for="username" th:text="#{nomUtilisateur}"></label> <input
-				type="text" class="form-control" id="username" name="username" />
-		</div>
-		<div class="mb-3">
-			<label class="form-label" for="password" th:text="#{motDePasse}"></label> <input
-				type="password" class="form-control" id="password" name="password" />
-		</div>
-		<div class="form-check">
-			<input class="form-check-input" type="checkbox" id="showhide"
-				name="showhide" onclick="showhidepass()" /> <label
-				class="form-check-label" for="showhide"
-				th:text="#{affichermotdepasse}"></label>
-		</div>
-		<br />
-		<div class="mb-3">
-			<input class="btn btn-primary" type="submit" th:value="#{connexion}" />
-		</div>
+		<label for="username" th:text="#{nomUtilisateur}"></label><br/>
+		<input type="text" id="username" name="username" />
+		<br/><br/>
+		<label for="password" th:text="#{motDePasse}"></label><br/>
+		<input type="password" id="password" name="password" />
+		<br/><br/>
+		<input type="checkbox" id="showhide"
+				name="showhide" onclick="showhidepass()" />
+		<label for="showhide" th:text="#{affichermotdepasse}"></label>
+		<br/><br/>
+		<input type="submit" th:value="#{connexion}" />
 	</form>
 	<br />
 	<br />
-	<a class="btn btn-default" th:href="@{'/forgotPassword'}"
+	<a th:href="@{'/forgotPassword'}"
 		th:utext="#{forgotPassword}"></a>
 </body>
 </html>
