--- a/src/main/resources/templates/parametresForm.html
+++ b/src/main/resources/templates/parametresForm.html
@@ -21,9 +21,10 @@
 			<input class="form-check-input" type="checkbox" id="voirLatLon" name="voirLatLon" />
 			<label class="form-check-label" for="voirLatLon" th:text="#{voirLatLon}"></label>
 		</div>
-		<div class="mb-3">
+		<div class="form-floating mb-3">
+			<input placeholder="" class="form-control datepicker"
+				type="text" id="date" name="date" />
 			<label class="form-label" for="date" th:text="#{datedecalee}"></label>
-			<input class="form-control datepicker" type="text" id="date" name="date" />
 		</div>
 		<br/>
 		<div th:replace="includeForm :: BtnForm"></div>
