--- a/src/main/resources/templates/essaim/essaimEssaimerForm.html
+++ b/src/main/resources/templates/essaim/essaimEssaimerForm.html
@@ -13,6 +13,10 @@
     		return $.inArray(value, [[${essaimNoms}]]) == -1;
 			}, [[#{nomexiste}]]);
 		$("#essaimeForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : {
 					required : true,
