--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -24,6 +24,10 @@
 			});
 		$("#reineDateNaissance,#dateAcquisition").datepicker();
 		$("#essaimForm").validate({
+		  	errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : {
 					required : true,
