--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -15,6 +15,10 @@
 			}
 	    });
 		$("#evenementForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				date : {
 					required : true
