--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -28,6 +28,10 @@
 			return parseInt(value, 10) <= parseInt($otherElement.val(), 10);
 		});
 		$("#hausseForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : {
 					required : true,
