--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -11,6 +11,10 @@
     		return $.inArray(value, [[${personneEmails}]]) == -1;
 			}, [[#{emailexiste}]]);
 		$("#personneForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : "required",
 				prenom : "required",
