--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -8,6 +8,10 @@
 	$().ready(function() {
 		$("#typeMiel").focus();
 		$("#recolteForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				date : { 
 					'required' : true
