--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -24,6 +24,10 @@
 		});
 		$("#dateAcquisition").datepicker();
 		$("#rucheForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : {
 					required : true,
