--- a/src/main/resources/templates/ruche/rucheTypeForm.html
+++ b/src/main/resources/templates/ruche/rucheTypeForm.html
@@ -9,6 +9,10 @@
     		return $.inArray(value, [[${rucheTypeNoms}]]) == -1;
 			}, [[#{nomexiste}]]);
 		$("#rucheTypeForm").validate({
+			errorClass: 'erreur-form',
+			errorPlacement: function(error, element) {
+			    error.insertBefore(element.closest('div'));
+			},
 			rules : {
 				nom : {
 					required : true,
