suppression meta shrink-to-fit, remérage inactive check dépot et cadre

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -27,6 +27,15 @@
 				}
 			}
 		});
+		$('#remerageId').on('change', function (e) {
+			if(e.target.value === '') {
+				$('#depot').prop('disabled', false);
+				$('#evencadre').prop('disabled', false);
+			} else {
+				$('#depot').prop('disabled', true);
+				$('#evencadre').prop('disabled', true);
+			}
+		});
 	});
 </script>
 </head>
