--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -4,41 +4,28 @@
 <title th:text="#{lesRuches}"></title>
 <meta charset="UTF-8" />
 <meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
-
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.structure.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/jquery-ui-v1.12.1/jquery-ui.theme.min.css}" />
-	
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
-	
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/datatables-1.10.24.1/datatables.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/open-iconic/font/css/open-iconic-bootstrap.css}" />
-	
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
-
 <script th:src="@{/js/jquery-ui-v1.12.1/jquery-ui.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.19.3.js}"></script>
-
-<!-- 
-<script th:src="@{/js/bootstrap-4.6.0-dist/js/bootstrap.bundle.min.js}"></script>
-<link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/bootstrap-4.6.0-dist/css/bootstrap.min.css}" />
- -->	
 <script th:src="@{/js/bootstrap-5.0.1-dist/js/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.0.1-dist/css/bootstrap.min.css}" />
- 
 <script th:src="@{/js/datatables-1.10.24.1/datatables.min.js}"></script>
 <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-
 <script th:inline="javascript">
 $().ready(function() {
   $('.confirmdeploie').on('click', function() {
@@ -59,6 +46,7 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 <th:block th:replace="${styles} ?: ~{}" />
 <th:block th:replace="${links} ?: ~{}" />
 </head>
+
 <script th:fragment="d3" th:src="@{/js/d3.min-6.7.0.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-2.0.0.js}"></script>
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-2.0.1.js}"></script>
@@ -95,15 +83,13 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 	});
 </script>
 
-
 <script th:fragment="jquerydaterangepicker" th:src="@{/js/jquery-date-range-picker-0.21.1/jquery.daterangepicker.min.js}"></script>
 <link th:fragment="cssjquerydaterangepicker" rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/jquery-date-range-picker-0.21.1/daterangepicker.min.css}" />
 <script th:fragment="moment" th:src="@{/js/moment-with-locales.min-2.29.1.js}"></script>
 	
-	
 <body>
-	<!--/*    https://getbootstrap.com/docs/4.4/components/navbar/    */-->
+	<!--/*    https://getbootstrap.com/docs/5.0/components/navbar/    */-->
 	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 	  <div class="container-fluid"> 
 		<a class="navbar-brand" href="#" th:href="@{/}"> <img
