--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
 	<nav th:replace="include :: navbar"></nav>
 	<br />
 	<br />
-	<img th:src="@{/images/abeille_erreur.jpeg}" />
+	<img th:alt="#{Erreur}" th:src="@{/images/abeille_erreur.jpeg}" />
 	<h1 th:text="#{oups}"></h1>
 	<br />
 	<p th:if="${path}">
