messages.properties classement

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -80,7 +80,7 @@
 			<div class="form-floating mb-3">
 				<select
 					class="form-control" id="remerageId" name="remerageId">
-					<option th:text="#{aucune}" value=""></option>
+					<option th:text="#{aucun}" value=""></option>
 					<option th:each="essaimopt : ${essaimsRemerage}" th:value="${essaimopt[0]}"
 						th:text="${essaimopt[1]}"></option>
 				</select>
