--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -32,8 +32,8 @@ $(document).ready(function() {
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<table class="table table-responsive table-bordered table-striped" id="evenements">
+	<div class="container-fluid table-responsive">
+		<table class="table table-sm table-bordered table-striped" id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
