--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -60,29 +60,29 @@ $().ready(function() {
 	<br />
 	<br />
 	<div class="container-fluid">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col">
-					<h1 class="item" id="titre" th:text="#{hausse}+' '+${hausse.nom}"></h1>
-				</div>
-				<div class="col">
-					<a th:href="@{'/hausse/modifie/'+${hausse.id}}"
-					  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
-					&nbsp;
-					<span id="clone" class="bi bi-collection" th:title="#{cloner}" aria-hidden="true"></span>
-       				<a id="supprime" th:href="@{'/hausse/supprime/'+${hausse.id}}"
-       				  class="confirmation bi bi-trash" style="color:red" 
-       				  th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
-					<a th:href="@{'/evenement/hausse/'+${hausse.id}}"
-					  class="padicons bi bi-list-ul" th:title="#{evenements}" aria-hidden="true"></a>
-					<a th:href="@{'/evenement/hausse/commentaire/'+${hausse.id}}"
-					  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>
-					<a th:href="@{'/evenement/hausse/remplissage/'+${hausse.id}}"
-					  class="bi bi-square-half" th:title="#{evenementRemplissage}" aria-hidden="true"></a>
-				</div>
+		<div class="row">
+			<div class="col">
+				<h1 class="item" id="titre" th:text="#{hausse}+' '+${hausse.nom}"></h1>
+			</div>
+			<div class="col">
+				<a th:href="@{'/hausse/modifie/'+${hausse.id}}"
+				  class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
+				&nbsp;
+				<span id="clone" class="bi bi-collection" th:title="#{cloner}" aria-hidden="true"></span>
+      				<a id="supprime" th:href="@{'/hausse/supprime/'+${hausse.id}}"
+      				  class="confirmation bi bi-trash" style="color:red" 
+      				  th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
+				<a th:href="@{'/evenement/hausse/'+${hausse.id}}"
+				  class="padicons bi bi-list-ul" th:title="#{evenements}" aria-hidden="true"></a>
+				<a th:href="@{'/evenement/hausse/commentaire/'+${hausse.id}}"
+				  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>
+				<a th:href="@{'/evenement/hausse/remplissage/'+${hausse.id}}"
+				  class="bi bi-square-half" th:title="#{evenementRemplissage}" aria-hidden="true"></a>
 			</div>
 		</div>
-		<table class="table table-responsive table-bordered">
+	</div>
+	<div class="container-fluid table-responsive">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
@@ -104,7 +104,7 @@ $().ready(function() {
 				</tr>
 			</tbody>
 		</table>
-		<table class="table table-responsive table-bordered">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
@@ -133,7 +133,7 @@ $().ready(function() {
 				</tr>
 			</tbody>
 		</table>
-		<table class="table table-responsive table-bordered">			
+		<table class="table table-sm table-bordered">			
 			<thead>
 				<tr>
 					<th style="background-color:PaleGoldenRod" th:text="#{remplissage}"></th>
