--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -98,7 +98,7 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 	  <div class="container-fluid"> 
 		<a class="navbar-brand" href="#" th:href="@{/}"> <img
-			th:src="@{/images/ruche.png}" alt="Logo" style="width: 20px;">
+			th:src="@{/images/ruche.png}" alt="Logo" width="18">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
 			data-bs-target="#navbarSupportedContent" 
