--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -34,8 +34,8 @@ $().ready(function() {
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<table class="table table-bordered">
+	<div class="container-fluid table-responsive">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:text="#{email}"></th>
@@ -57,7 +57,7 @@ $().ready(function() {
 			</tbody>
 		</table>
 		<h6 th:text="#{listeRuchers}"></h6>
-		<table class="table table-bordered table-striped" id="ruchers">
+		<table class="table table-sm table-bordered table-striped" id="ruchers">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
