--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -69,8 +69,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid " id="detailRucher">
-		<table class="table table-responsive table-bordered">
+	<div class="container-fluid table-responsive" id="detailRucher">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:if="${session.voirInactif}" th:text="#{actif}"></th>
@@ -102,7 +102,7 @@
 		<h6	th:unless="${#arrays.length(ruches)}" th:text="#{Pasderuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
 			<h6	th:text="#{listeRuches}"></h6>
-			<table class="table table-responsive table-bordered" id="ruches">
+			<table class="table table-sm table-bordered" id="ruches">
 				<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -131,7 +131,7 @@
 				</tbody>
 			</table>
 		</th:block>
-		<table th:if="${#arrays.length(poidsListe)} &gt; 0" class="table table-responsive table-bordered">			
+		<table th:if="${#arrays.length(poidsListe)} &gt; 0" class="table table-sm table-bordered">			
 		<thead>
 			<tr>
 				<th style="background-color:LightCyan" th:text="#{recolte}"></th>
