--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -102,7 +102,7 @@
 		<h6	th:unless="${#arrays.length(ruches)}" th:text="#{Pasderuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
 			<h6	th:text="#{listeRuches}"></h6>
-			<table class="table table-sm table-bordered" id="ruches">
+			<table class="table table-sm table-bordered table-striped" id="ruches">
 				<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
