--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-sm table-bordered table-striped" id="ruches">
+		<table class="table table-sm table-bordered table-striped dt-responsive" id="ruches">
 			<thead>
 				<tr>
 					<th style="background-color:LightGoldenRodYellow" th:text="#{nom}"></th>
