rucheAjoutRetrait.html rucherAjout.html dt-striped

--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -60,7 +60,7 @@
 	<br />
 	<div class="container-fluid">
 		<h6 th:text="#{retirerreordonnerHausses}"></h6>
-		<table class="table table-bordered" id="retraitHausses">
+		<table class="table table-bordered table-striped" id="retraitHausses">
 			<thead>
 				<tr>
 					<th th:text="#{Ordre}"></th>
@@ -77,7 +77,7 @@
 			</tbody>
 		</table>
 		<h6 th:text="#{ajouterHausses}"></h6>
-		<table class="table table-bordered" id="ajoutHausses">
+		<table class="table table-bordered table-striped" id="ajoutHausses">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
