--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -30,7 +30,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.0.1-dist/css/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.10.25/datatables.min.js}"></script>
-<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+<script th:src="@{/js/dataTables.bootstrap5.min-1.10.25.js}"></script>
 <script th:inline="javascript">
 $().ready(function() {
   $('.confirmdeploie').on('click', function() {
